Kubernetes/Deployment/monitoring/influxdb/influxdb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: influxdb
  namespace: monitoring
spec:
  replicas: 1
  template:
    metadata:
      name: influxdb
      labels:
        app: influxdb        
    spec:
      containers:
      - name: influxdb
        image: gcr.io/google_containers/heapster-influxdb-amd64:v1.1.1
        command: ["influxd","--config","/etc/influxdb/config.toml"]
        ports:
        - name: admin
          containerPort: 8083
        - name: data
          containerPort: 8086
        resources:
          limits:
            memory: 4Gi
            cpu: 2048m
        volumeMounts:
        - mountPath: /data
          name: influxdb-storage
        - mountPath: /etc/influxdb
          name: influxdb-conf
        - name: localtime
          mountPath: /etc/localtime          
      volumes:
      - name: influxdb-storage
        persistentVolumeClaim:
         claimName: monitorin-influxdb-pvc
      - name: influxdb-conf
        configMap:
           name:  influxdb-conf
      - name: localtime
        hostPath:
          path: /etc/localtime
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: monitoring
  labels:
    app: influxdb  
spec:
  ports:
  - name: data
    port: 8086
    targetPort: 8086
  - name: admin
    port: 8083
    targetPort: 8083
  selector:
    app: influxdb
